# trojan-ui

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
config/: example_config.json  trojan_ui.desktop  trui.desktop
debian/: changelog  control  copyright
src/: client.rs  components.rs  config.rs  lib.rs  main.rs  proxy.rs  utils.rs
src/components/: toggle_switch.rs
ui/: appwindow.slint  client_page.slint  list_page.slint
ui/widgets/: color-button.slint  simple-switch.slint
