[package]
name = "trojan_ui"
version = "0.2.3"
edition = "2021"

authors = ["xiamengliang <xiamengliang@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.2"
egui_extras = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trojan_rust = { git = "https://github.com/qiuzhiqian/trojan_rust.git" }
tokio = { version = "1", features = ["full"] }
regex = "1"
fast_qr = "0.8.3"
image = "0.24.5"