[package]
name = "trojan_ui"
version = "0.2.4"
edition = "2021"

description = "This is a trojan ui tool written in rust"
authors = ["xiamengliang <xiamengliang@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.2"
egui_extras = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trojan_rust = { git = "https://github.com/qiuzhiqian/trojan_rust.git" }
tokio = { version = "1", features = ["full"] }
regex = "1"
fast_qr = "0.8.3"
image = "0.24.5"
notify-rust = "4.8.0"

[package.metadata.deb]
assets = [
    ["target/release/trojan_ui", "usr/bin/", "755"],
    ["config/trojan_ui.desktop", "usr/share/applications/", "644"],
    ["config/trojan_ui.svg", "usr/share/icons/hicolor/scalable/apps/trojan_ui.svg", "644"],
]