[package]
name = "trui"
version = "0.2.5"
edition = "2021"
build = "build.rs"

description = "This is a trojan ui tool written in rust"
authors = ["xiamengliang <xiamengliang@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trojan_rust = "0.1"
tokio = { version = "1", features = ["full"] }
regex = "1"
fast_qr = "0.8.3"
image = "0.24.5"
notify-rust = "4.8.0"
log = "0.4.17"
env_logger = "0.9.0"

[build-dependencies]
slint-build = "1.3"

[package.metadata.deb]
assets = [
    ["target/release/trui", "usr/bin/", "755"],
    ["config/trui.desktop", "usr/share/applications/", "644"],
    ["config/trui.svg", "usr/share/icons/hicolor/scalable/apps/trui.svg", "644"],
]